[tool.poetry]
name = "my-termo"
version = "0.2.0"
readme = "README.md"
description = "A simple termo in command line style"
authors = ["Gustavo Soares <gustavo.soares.cdc@gmail.com>"]
homepage = "https://github.com/GussSoares/my-termo"
repository = "https://github.com/GussSoares/my-termo"
keywords = ["termo", "command-line"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
termo = "my_termo.main:termo"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
